# ci-experiments-rust

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
tests/: test.rs
