[package]
name = "ci-experiments-rust"
version = "0.3.0"
authors = ["Yarrow Angelweed <yarrow.angelweed@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
assert_cmd = "1.0.5"
assert_fs = "1.0.2"
